added google oAuth to the app

--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    background-image: url('../assets/flip.jpg');
+    background-position: center;
+    background-size: cover;
+}
