--- a/src/global.css
+++ b/src/global.css
@@ -3,9 +3,30 @@
 @tailwind utilities;
 
 #signin {
-    background-image: url('../assets/flip.jpg');
-    background-position: center;
+    background-image: url('../assets/signinbg.jpg');
+    background-position:bottom;
     background-size:cover;
 }
+
+@keyframes typewriter {
+    from { width: 0; }
+    to { width: 100%; }
+  }
+  
+@keyframes blink {
+0% { border-color: black; }
+100% { border-color: transparent; }
+}
+
+.typewriter {
+overflow: hidden;
+border-right: 2px solid white; /* Bar color */
+white-space: nowrap;
+width: 0;
+animation: 
+    typewriter 1s steps(30) 1s 1 normal both,
+    blink 500ms steps(30) 1s 1 forwards;
+}
+
 
 
